--- a/WeatherAPIApp/WeatherAPIApp.csproj
+++ b/WeatherAPIApp/WeatherAPIApp.csproj
@@ -48,6 +48,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Device" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -124,9 +125,23 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\DTO.cs" />
+    <Compile Include="Models\City.cs" />
+    <Compile Include="Models\Clouds.cs" />
+    <Compile Include="Models\Coord.cs" />
+    <Compile Include="Models\CurrentWeatherDTO.cs" />
+    <Compile Include="Models\FiveDaysWeatherForecastDTO.cs" />
+    <Compile Include="Models\GetLocation.cs" />
+    <Compile Include="Models\List.cs" />
+    <Compile Include="Models\Main.cs" />
+    <Compile Include="Models\Rain.cs" />
+    <Compile Include="Models\Snow.cs" />
+    <Compile Include="Models\Sys.cs" />
+    <Compile Include="Models\Weather.cs" />
+    <Compile Include="Models\Wind.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\WeatherService.cs" />
+    <Compile Include="ViewModels\CurrentWeatherVM.cs" />
+    <Compile Include="ViewModels\FiveDaysWeatherForecastVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -162,8 +177,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Partials\_CurrentWeatherPV.cshtml" />
+    <Content Include="Views\Home\Partials\_FiveDaysWeatherForecastPV.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
